; ModuleID = '/home/carl/AnghaBench/linux/fs/ceph/extr_dir.c_ceph_invalidate_dentry_lease.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ceph/extr_dir.c_ceph_invalidate_dentry_lease.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.ceph_dentry_info = type { i64, i32 }

@jiffies = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ceph_invalidate_dentry_lease(%struct.dentry* %0) #0 {
  %2 = alloca %struct.dentry*, align 8
  %3 = alloca %struct.ceph_dentry_info*, align 8
  store %struct.dentry* %0, %struct.dentry** %2, align 8
  %4 = load %struct.dentry*, %struct.dentry** %2, align 8
  %5 = call %struct.ceph_dentry_info* @ceph_dentry(%struct.dentry* %4)
  store %struct.ceph_dentry_info* %5, %struct.ceph_dentry_info** %3, align 8
  %6 = load %struct.dentry*, %struct.dentry** %2, align 8
  %7 = getelementptr inbounds %struct.dentry, %struct.dentry* %6, i32 0, i32 0
  %8 = call i32 @spin_lock(i32* %7)
  %9 = load i32, i32* @jiffies, align 4
  %10 = load %struct.ceph_dentry_info*, %struct.ceph_dentry_info** %3, align 8
  %11 = getelementptr inbounds %struct.ceph_dentry_info, %struct.ceph_dentry_info* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 8
  %12 = load %struct.ceph_dentry_info*, %struct.ceph_dentry_info** %3, align 8
  %13 = getelementptr inbounds %struct.ceph_dentry_info, %struct.ceph_dentry_info* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  %14 = load %struct.ceph_dentry_info*, %struct.ceph_dentry_info** %3, align 8
  %15 = call i32 @__dentry_lease_unlist(%struct.ceph_dentry_info* %14)
  %16 = load %struct.dentry*, %struct.dentry** %2, align 8
  %17 = getelementptr inbounds %struct.dentry, %struct.dentry* %16, i32 0, i32 0
  %18 = call i32 @spin_unlock(i32* %17)
  ret void
}

declare dso_local %struct.ceph_dentry_info* @ceph_dentry(%struct.dentry*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @__dentry_lease_unlist(%struct.ceph_dentry_info*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
